<resources>
    <string name="app_name">Dish</string>
    <string name="watch">WATCH</string>
    <string name="record">RECORD</string>
    <string name="live">LIVE</string>
    <string name="error">ERROR</string>
    <string name="content_unavailable">Content Unavailable</string>
    <string name="content_unavailable_message">Unfortunately this content could not be loaded. We’re sorry. Please select something else or try again later.</string>
    <string name="epg_unavailable">TV Guide Unavailable</string>
    <string name="epg_unavailable_message">Unfortunately TV guide could not be loaded. Please try again later.</string>
    <string name="advert">ADVERT</string>
    <string name="okay">OKAY</string>
    <string name="now">NOW</string>
    <string name="high">HIGH</string>
    <string name="low">LOW</string>
    <string name="sports">SPORTS</string>
    <string name="playback">PLAYBACK</string>
    <string name="video_quality">VIDEO QUALITY</string>
    <string name="auto">AUTO</string>
    <string name="medium">MEDIUM</string>
    <string name="watch_live">Watch Live</string>
    <string name="learn_more">Learn more</string>
    <string name="accept">ACCEPT</string>
    <string name="see_stats">See stats</string>
    <string name="team_stats">Team Stats</string>
    <string name="home">Home</string>
    <string name="tv_guide">TV Guide</string>
    <string name="on_demand">On Demand</string>
    <string name="recordings">Recordings</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="_12_hour">12 HOUR</string>
    <string name="time_format">TIME FORMAT</string>
    <string name="format_options">FORMAT OPTIONS</string>
    <string name="off">OFF</string>
    <string name="_24_hour">24 HOUR</string>
    <string name="modern">MODERN</string>
    <string name="classic">CLASSIC</string>
    <string name="tv_guide_format">TV GUIDE FORMAT</string>
    <string name="celsius_c">CELSIUS (°C)</string>
    <string name="fahrenheit_f">FAHRENHEIT (°F)</string>
    <string name="temperature_format">TEMPERATURE FORMAT</string>
    <string name="player_error">Error occurred. Code(%d)</string>
    <string name="app_settings">APP SETTINGS</string>
    <string name="faqs">FAQS</string>
    <string name="legal_amp_about"><![CDATA[LEGAL & ABOUT]]></string>
    <string name="sign_out">SIGN OUT</string>
    <string name="parental_controls">PARENTAL CONTROLS</string>
    <string name="account">ACCOUNT</string>

    <string name="search_edit_text_hint">Search for Live and On Demand Content</string>
    <string name="key_a">a</string>
    <string name="key_b">b</string>
    <string name="key_c">c</string>
    <string name="key_d">d</string>
    <string name="key_e">e</string>
    <string name="key_f">f</string>
    <string name="key_g">g</string>
    <string name="key_h">h</string>
    <string name="key_i">i</string>
    <string name="key_j">j</string>
    <string name="key_k">k</string>
    <string name="key_l">l</string>
    <string name="key_m">m</string>
    <string name="key_n">n</string>
    <string name="key_o">o</string>
    <string name="key_p">p</string>
    <string name="key_q">q</string>
    <string name="key_r">r</string>
    <string name="key_s">s</string>
    <string name="key_t">t</string>
    <string name="key_u">u</string>
    <string name="key_v">v</string>
    <string name="key_w">w</string>
    <string name="key_x">x</string>
    <string name="key_y">y</string>
    <string name="key_z">z</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_space">SPACE</string>
    <string name="recent_searches_text">Recent Searches</string>
    <string name="clear_all_btn_text">Clear All</string>
    <string name="search_error_title_text">No Results</string>
    <string name="search_error_description_text">Sorry, we couldn’t find any titles matching your \nsearch %s </string>

    <string name="network_error">Network Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="network_error_message">Please ensure you are on the correct network to use this service.</string>
    <string name="unknown_error_message">The app is facing an unknown error. Please contact the support team.</string>
    <string name="no_smartbox_found_error">Network Error</string>
    <string name="no_smartbox_found_error_message">Your wifi network is not configured to work with Dish OnStream. Please check that you are on the correct network for this service.</string>

    <string name="faq">FAQ</string>
    <string name="enable_large_font_size">ENABLE LARGE FONT SIZE</string>
    <string name="autoplay_next_episode">AUTOPLAY NEXT EPISODE</string>
    <string name="about">ABOUT</string>
    <string name="app_version">App Version</string>
    <string name="device_information">Device Information</string>
    <string name="contact">Contact</string>

    <string name="permitted_classifications">Permitted Classifications</string>
    <string name="young_kids">YOUNG KIDS</string>
    <string name="all_ages">ALL AGES</string>
    <string name="ages_2_6">AGES 2–6</string>
    <string name="kids">KIDS</string>
    <string name="ages_7_and_up">AGES 7 AND UP</string>
    <string name="ages_7_and_up_fantasy">AGES 7 AND UP (FANTASY VIOLENCE)</string>
    <string name="teenagers">TEENAGERS</string>
    <string name="parental_guidance_recommenced">PARENTAL GUIDANCE RECOMMENDED</string>
    <string name="parents_strongly_cautioned">PARENTS STRONGLY CAUTIONED</string>
    <string name="unsuitable_under_14">UNSUITABLE FOR THOSE UNDER 14</string>
    <string name="adults">ADULTS</string>
    <string name="unsuitable_under_17">UNSUITABLE FOR THOSE UNDER 17</string>
    <string name="restricted">RESTRICTED</string>
    <string name="adults_only">ADULTS ONLY</string>
    <string name="unrated_content">UNRATED CONTENT</string>
    <string name="restore_default_settings">RESTORE DEFAULT SETTINGS</string>
    <string name="reset_app_settings">RESET APP SETTINGS</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="y7">Y7</string>
    <string name="y7_fv">Y7 FV</string>
    <string name="pg">PG</string>
    <string name="pg_13">PG-13</string>
    <string name="pg_14">14</string>
    <string name="ma">MA</string>
    <string name="nc_17">NC-17</string>
    <string name="unrated">UNRATED</string>
    <string name="setup_pin">SETUP A PIN</string>
    <string name="access_parental_control">ACCESS PARENTAL CONTROLS</string>
    <string name="forgot_pin">FORGOT YOUR PIN</string>
    <string name="content_pin_setup">PIN Setup Complete</string>
    <string name="content_pin_setup_message">You can now make sensitive changes to your account</string>
    <string name="enable_one_classification_dialog_title">One Classification Must Be Enabled</string>
    <string name="enable_one_classification_dialog_text">Please enable at least one other classification before attempting to disable the selected one</string>

    <string name="popular_on_demand_content_text">Popular On Demand</string>
    <string name="internet_connection_error">Your device is not connected to internet.</string>
    <string name="generic_error">Something went wrong…</string>

    <string name="enter_your_pin">Enter Your PIN Number</string>
    <string name="enter_your_pin_description">Enter your PIN number to make changes in parental control</string>
    <string name="re_enter_your_pin">Re-enter Your PIN</string>
    <string name="re_enter_your_pin_description">Re-enter the PIN you created on the previous screen</string>

    <string name="correct_pin">Entered Pin is Correct..</string>
    <string name="incorrect_pin">Incorrect Pin</string>
    <string name="reenter_incorrect_pin">Please enter the same PIN as before</string>
    <string name="pin_entered">Pin Entered</string>

    <string name="see_all_card_text">See All\n %d</string>
    <string name="see_all_text">See All</string>
    <string name="play_text">PLAY</string>
    <string name="play_movie_text">PLAY MOVIE</string>
    <string name="play_season_show_text">PLAY S%d E%d</string>
    <string name="bullet_char">\u00b7</string>
    <string name="text_mins">MINS</string>
    <string name="season_and_episodes_text">SEASONS &amp; EPISODES</string>
     <string name="on_demand_play_option_dialog_title">Select Platform to Watch On</string>
    <string name="on_demand_play_option_dialog_description">Select the platform that you want to watch %s on.</string>
    <string name="on_demand_play_series_description_text">S%d E%d</string>

    
    <string name="season_details_unavailable">Season Details Unavailable</string>
    <string name="season_unavailable_message">Unable to load the Season details. Please try again later</string>

 </resources>