<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_1"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_1"
        android:nextFocusUp="@id/key_1"
        android:nextFocusDown="@id/key_1"
        android:focusable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_2"
        app:layout_constraintEnd_toStartOf="@+id/key_2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_2"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_2"
        android:nextFocusUp="@id/key_2"
        android:nextFocusDown="@id/key_2"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/key_3"
        app:layout_constraintStart_toEndOf="@+id/key_1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_3"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_3"
        android:nextFocusUp="@id/key_3"
        android:nextFocusDown="@id/key_3"
        android:focusable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_2"
        app:layout_constraintEnd_toStartOf="@+id/key_4"
        app:layout_constraintStart_toEndOf="@+id/key_2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_4"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_4"
        android:nextFocusUp="@id/key_4"
        android:nextFocusDown="@id/key_4"
        android:focusable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_3"
        app:layout_constraintEnd_toStartOf="@+id/key_5"
        app:layout_constraintStart_toEndOf="@+id/key_3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_5"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_5"
        android:nextFocusUp="@id/key_5"
        android:nextFocusDown="@id/key_5"
        android:focusable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_4"
        app:layout_constraintEnd_toStartOf="@+id/key_6"
        app:layout_constraintStart_toEndOf="@+id/key_4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_6"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_6"
        android:nextFocusUp="@id/key_6"
        android:nextFocusDown="@id/key_6"
        android:focusable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_5"
        app:layout_constraintEnd_toStartOf="@+id/key_7"
        app:layout_constraintStart_toEndOf="@+id/key_5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_7"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_7"
        android:nextFocusUp="@id/key_7"
        android:nextFocusDown="@id/key_7"
        android:focusable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_6"
        app:layout_constraintEnd_toStartOf="@+id/key_8"
        app:layout_constraintStart_toEndOf="@+id/key_6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_8"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_8"
        android:nextFocusUp="@id/key_8"
        android:nextFocusDown="@id/key_8"
        android:focusable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_7"
        app:layout_constraintEnd_toStartOf="@+id/key_9"
        app:layout_constraintStart_toEndOf="@+id/key_7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_9"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_9"
        android:nextFocusUp="@id/key_9"
        android:nextFocusDown="@id/key_9"
        android:focusable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_8"
        app:layout_constraintEnd_toStartOf="@+id/key_0"
        app:layout_constraintStart_toEndOf="@+id/key_8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/key_0"
        style="@style/Keyboard_number_keys"
        android:layout_marginEnd="@dimen/_5dp"
        android:layout_marginRight="@dimen/_5dp"
        android:text="@string/key_0"
        android:nextFocusUp="@id/key_0"
        android:nextFocusDown="@id/key_0"
        android:focusable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/key_9"
        app:layout_constraintEnd_toStartOf="@+id/key_delete"
        app:layout_constraintStart_toEndOf="@+id/key_9" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/key_delete"
        android:layout_width="@dimen/_35dp"
        android:layout_height="@dimen/_40dp"
        android:paddingStart="@dimen/_4dp"
        android:paddingEnd="@dimen/_4dp"
        android:paddingTop="@dimen/_2dp"
        android:paddingBottom="@dimen/_4dp"
        android:layout_marginStart="@dimen/_5dp"
        android:nextFocusUp="@id/key_delete"
        android:nextFocusDown="@id/key_delete"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/keyboard_btn_selector"
        android:src="@drawable/backspace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key_0" />

</androidx.constraintlayout.widget.ConstraintLayout>
