<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:padding="@dimen/_30dp"
    tools:context=".ui.main.settings.SettingsFragment">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recordings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/settings_option_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/recordings"
        android:nextFocusUp="@id/settings"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        app:layout_constraintWidth_percent=".2" />

    <TextView
        android:id="@+id/account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/settings_option_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/account"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recordings"
        app:layout_constraintWidth_percent=".2" />

    <TextView
        android:id="@+id/parental_controls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/settings_option_background"
        android:focusable="true"
        android:padding="10dp"
        android:maxLines="1"
        android:text="@string/parental_controls"
        android:nextFocusUp="@id/settings"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account"
        app:layout_constraintWidth_percent=".2" />

    <TextView
        android:id="@+id/app_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/settings_option_background"
        android:focusable="true"
        android:padding="10dp"
        android:nextFocusUp="@id/parental_controls"
        android:text="@string/app_settings"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parental_controls"
        app:layout_constraintWidth_percent=".2" />

    <TextView
        android:id="@+id/faqs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/settings_option_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/faqs"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_settings"
        app:layout_constraintWidth_percent=".2" />

    <TextView
        android:id="@+id/legal_and_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/settings_option_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/legal_amp_about"
        android:textColor="@color/white"
        android:visibility="gone"
        android:nextFocusDown="@+id/legal_and_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/faqs"
        app:layout_constraintWidth_percent=".2" />

    <TextView
        android:id="@+id/sign_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/settings_option_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/legal_and_about"
        app:layout_constraintWidth_percent=".2" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/app_settings"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>