<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_format"
        android:id="@+id/title"
        android:textColor="@color/title_setting_option"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/fahrenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14dp"
        android:background="@drawable/settings_sub_option_background"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:id="@+id/fahrenheitText"
            android:layout_weight="1"
            android:text="@string/fahrenheit_f"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fahrenheit_check"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_check"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/celsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14dp"
        android:background="@drawable/settings_sub_option_background"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_weight="1"
            android:id="@+id/celciusText"
            android:text="@string/celsius_c"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/celsius_check"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_check"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>